--- a/Pipfile
+++ b/Pipfile
@@ -1,16 +1,17 @@
 [[source]]
-name = "pypi"
-url = "https://pypi.org/simple"
+url = "https://pypi.python.org/simple"
 verify_ssl = true
-
-[dev-packages]
+name = "pypi"
 
 [packages]
-flask = "*"
-flask-sqlalchemy = "*"
-flask-marshmallow = "*"
-marshmallow-sqlalchemy = "*"
-beautifulsoup4 = "*"
+Flask = "==1.1.2"
+Flask-SQLAlchemy = "==2.4.4"
+flask-marshmallow = "==0.14.0"
+marshmallow-sqlalchemy = "==0.24.0"
+beautifulsoup4 = "==4.9.3"
+lxml = "*"
+
+[dev-packages]
 
 [requires]
 python_version = "3.8"
