--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ flask-marshmallow = "==0.14.0"
 marshmallow-sqlalchemy = "==0.24.0"
 beautifulsoup4 = "==4.9.3"
 lxml = "*"
+pandas = "==1.2.2"
 
 [dev-packages]
 
